# horizon5-mt

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Horizon.ex5  Horizon.mq5  HorizonAPI.mq5  HorizonGateway.mq5  HorizonMonitor.mq5  HorizonPersistence.mq5  LICENSE.md  Makefile  README.md  pyproject.toml  uncrustify.cfg
.github/: PULL_REQUEST_TEMPLATE.md
adapters/: ATrade.mqh
assets/: .gitignore  Asset.mqh  GBPCAD.mqh
configs/: Assets.mqh
constants/: COAsset.mqh  CODiagnostic.mqh  COEventKey.mqh  COHeartbeat.mqh  COHorizon.mqh  COHorizonGateway.mqh  COHorizonMonitor.mqh  COHorizonPersistence.mqh  COMessageBus.mqh  CONotificationType.mqh  COOrder.mqh  COReports.mqh  COSEDb.mqh  COSEGateway.mqh  COStatistics.mqh  COTime.mqh  COTimestamp.mqh  COTrade.mqh  COTransientDefer.mqh  time.mqh
docs/: index.md
entities/: EAccount.mqh  EAsset.mqh  EOrder.mqh
enums/: EAllocatorMode.mqh  EDebugLevel.mqh  EEquityAtRiskMode.mqh  ELogSystem.mqh  EOptimizationResultFormula.mqh  EOrderStatuses.mqh  EPortfolioAllocationFormula.mqh  EQueueActions.mqh  ESnapshotEvent.mqh  ESystemName.mqh  ETradeSeverity.mqh  ETradingModes.mqh  ETradingPauseReason.mqh
helpers/: HClampNumeric.mqh  HDeleteOldOrders.mqh  HDrawHorizontalLine.mqh  HDrawRectangle.mqh  HDrawVerticalLine.mqh  HGenerateDeterministicUuid.mqh  HGenerateUuid.mqh  HGetAccountUuid.mqh  HGetAssetRate.mqh  HGetAssetUuid.mqh  HGetCloseReason.mqh  HGetLogsPath.mqh  HGetMarginPerLot.mqh  HGetMarketStatus.mqh  HGetOrderStatus.mqh  HGetOrderUuid.mqh  HGetPipSize.mqh  (+20 more)
libraries/HorizonFileDb/: CMakeLists.txt  HorizonFileDb.cpp  HorizonFileDb.def  HorizonFileDb.h  build.ps1
libraries/HorizonFileDb/constants/: Limits.h
libraries/HorizonFileDb/entities/: Collection.h  Database.h  Document.h  Query.h
libraries/HorizonFileDb/services/: CollectionManager.h  DatabaseManager.h  FileIO.h  QueryEngine.h  UuidGenerator.h
libraries/HorizonMessageBus/: CMakeLists.txt  HorizonMessageBus.cpp  HorizonMessageBus.def  HorizonMessageBus.h  build.ps1
libraries/HorizonMessageBus/constants/: Limits.h
libraries/HorizonMessageBus/entities/: Message.h
libraries/HorizonMessageBus/helpers/: RingBuffer.h
libraries/HorizonMessageBus/services/: ChannelManager.h  ServiceRegistry.h
(+593 files in other folders)
